fixes bug where train dataset vas use in eval

--- a/cnn-dev.ipynb
+++ b/cnn-dev.ipynb
@@ -110,6 +110,7 @@
     "num_epochs = 10\n",
     "learning_rate = 1e-3\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "dropout = 0.25\n",
     "seed = 1337"
    ]
   },
@@ -122,6 +123,7 @@
     "# Download and load the MNIST dataset for numbers\n",
     "transform = transforms.Compose([\n",
     "    transforms.ToTensor(),\n",
+    "    transforms.Normalize((0.1307,), (0.3081,))\n",
     "])\n",
     "\n",
     "# Download dataset for training and test\n",
@@ -130,7 +132,7 @@
     "\n",
     "# Convert to loader\n",
     "train_loader = torch.utils.data.DataLoader(train_set, batch_size=batch_size, shuffle=True, num_workers=2)\n",
-    "test_loader  = torch.utils.data.DataLoader(train_set, batch_size=batch_size, shuffle=False, num_workers=2);"
+    "test_loader  = torch.utils.data.DataLoader(test_set, batch_size=batch_size, shuffle=False, num_workers=2);"
    ]
   },
   {
@@ -255,16 +257,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/10], Loss: 8.183E-03\n",
-      "Epoch [2/10], Loss: 1.027E-01\n",
-      "Epoch [3/10], Loss: 4.761E-02\n",
-      "Epoch [4/10], Loss: 1.652E-02\n",
-      "Epoch [5/10], Loss: 4.861E-02\n",
-      "Epoch [6/10], Loss: 2.835E-02\n",
-      "Epoch [7/10], Loss: 2.165E-04\n",
-      "Epoch [8/10], Loss: 9.986E-03\n",
-      "Epoch [9/10], Loss: 1.473E-04\n",
-      "Epoch [10/10], Loss: 1.123E-02\n"
+      "Epoch [1/10], Loss: 2.790E-03\n",
+      "Epoch [2/10], Loss: 6.625E-02\n",
+      "Epoch [3/10], Loss: 1.084E-02\n",
+      "Epoch [4/10], Loss: 3.315E-03\n",
+      "Epoch [5/10], Loss: 7.103E-03\n",
+      "Epoch [6/10], Loss: 1.468E-02\n",
+      "Epoch [7/10], Loss: 1.198E-04\n",
+      "Epoch [8/10], Loss: 1.293E-03\n",
+      "Epoch [9/10], Loss: 3.207E-05\n",
+      "Epoch [10/10], Loss: 1.046E-02\n"
      ]
     }
    ],
@@ -341,7 +343,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 99.70%\n"
+      "Test Accuracy: 99.28%\n"
      ]
     }
    ],
